--- a/LEM/CSS/010-geometria.html
+++ b/LEM/CSS/010-geometria.html
@@ -22,12 +22,12 @@
         */
         @font-face{
             font-family: "ubuntu";
-            src:url("Huglove.otf");
+            src:url("BebasNeue-Regular.otf");
         }
         h1{
           color:MediumSlateBlue;
           font-family: "ubuntu";
-          src:url("Huglove.otf");
+          src:url("BebasNeue-Regular.otf");
         }
         h2,h3{
           color:MediumSlateBlue;
