--- a/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/004-estilo inicial.html
+++ b/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/004-estilo inicial.html
@@ -10,6 +10,10 @@
 		</style>
 	</head>
 	<body>
-		<section id=>
+		<section id="izquierda">
+			<img src="kermit cute.jpeg">
+		</section>
+		<section id="derecha">
 		</section>
 	</body>
+</html>
