--- a/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/009-duplicamos artículo.html
+++ b/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/009-duplicamos artículo.html
@@ -19,7 +19,7 @@
 			<article>
 				<h3>Título</h3>
 				<ul>
-					<li><Elemento </li>
+					<li>Elemento</li>
 					<li></li>
 					<li></li>
 					<li></li>
