--- a/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/014-titulares.html
+++ b/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/014-titulares.html
@@ -11,26 +11,27 @@
 			#izquierda img{width:100%;}
 			#izquierda{flex:1;background:Lavender;padding:20px;color:black;}
 			#derecha{flex:4;padding:20px;}
-			#derecha article{display:flex;align-items:center;gap:20px;}
-			#derecha article img{width:50px;height:50px;}
-			#derecha article *{padding:0px;margin:0px;}
 		</style>
 	</head>
 	<body>
 		<section id="izquierda">
 			<img src="kermit cute.jpeg">
 			<article>
-				<h3>Contacto</h3>
+				<h3>Título</h3>
 				<ul>
-					<li>fsotillocuevas@gmail.com</li>
-					<li>+34 663 966 940</li>
+					<li>Elemento 1</li>
+					<li>Elemento 2</li>
+					<li>Elemento 3</li>
+					<li>Elemento 4</li>
 				</ul>
 			</article>
 			<article>
-				<h3>Idiomas</h3>
+				<h3>Título</h3>
 				<ul>
-					<li>Inglés - Intermedio</li>
+					<li>Elemento 1</li>
 					<li>Elemento 2</li>
+					<li>Elemento 3</li>
+					<li>Elemento 4</li>
 				</ul>
 			</article>
 			<article>
@@ -47,32 +48,14 @@
 		</section>
 		<section id="derecha">
 			<h1>Fabiana Sotillo</h1>
-			<h2>Estudiante de DAM</h2>
+			<h2>Full Stack Developer</h2>
 			<p>Profesional dinámica y proactiva con experiencia en hostelería y análisis de inventarios. Destaco por mis habilidades comunicativas, capacidad de adaptación y orientación al trabajo en equipo y disposición constante al aprendizaje. Experiencia en atención al cliente, protocolos de restauración y sistemas de gestión.</p>
 			<div id="experiencia">
-				<h3>Experiencia profesional</h3>
-				<article>
-				<img src="logo.png">
-				<div class="texto">
-				<h4>Puesto</h4>
-				<h5>Inicio - Final - Empresa</h5>
-				<p>Descripción del puesto</p>
-				</article>
-				<article>
-				<img src="logo.png">
-				<div class="texto">
-				<h4>Puesto</h4>
-				<h5>Inicio - Final - Empresa</h5>
-				<p>Descripción del puesto</p>
-				</article>
-				<article>
-				<img src="logo.png">
-				<div class="texto">
-				<h4>Puesto</h4>
-				<h5>Inicio - Final - Empresa</h5>
-				<p>Descripción del puesto</p>
-				</article>
-			</div>
+                <h3>Experiencia profesional</h3>
+      		</div>
+      		<div id="formacion">
+				<h3>Formación</h3>
+      		</div>
 		</section>
 	</body>
 </html>
