--- a/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/008-artículos genéricos.html
+++ b/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/008-artículos genéricos.html
@@ -20,11 +20,11 @@
 				<h3>Título</h3>
 				<ul>
 					<li>Experiencia</li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>Ekemento 2</li>
+					<li>Elemento 3</li>
+					<li>Elemento 4</li>
 				</ul>
-			</article<
+			</article>
 		</section>
 		<section id="derecha">
 		</section>
