--- a/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/016-css para control visual.html
+++ b/Lenguaje de marcas/002-Utilización de lenguajes de marcas en entornos web/007-LEM para la sindicación de contenidos/016-css para control visual.html
@@ -4,34 +4,33 @@
 		<title>Curriculum</title>
 		<meta charset="utf-8">
 		<style>
-			html{background:grey;}
+			html{background:grey;font-family:sans-serif;font-size:11px;text-align:justify;}
 			body{
-			width:600px;background:white;font-family:sans-serif;font-size:11px;
+			width:600px;background:white;
 			margin:auto;display:flex;}
 			#izquierda img{width:100%;}
 			#izquierda{flex:1;background:Lavender;padding:20px;color:black;}
 			#derecha{flex:4;padding:20px;}
+			#derecha article{display:flex;align-items:center;gap:20px;}
+			#derecha article img{width:50px;height:50px;}
+			#derecha article *{padding:0px;margin:0px;}
 		</style>
 	</head>
 	<body>
 		<section id="izquierda">
 			<img src="kermit cute.jpeg">
 			<article>
-				<h3>Título</h3>
+				<h3>Contacto</h3>
 				<ul>
-					<li>Elemento 1</li>
-					<li>Elemento 2</li>
-					<li>Elemento 3</li>
-					<li>Elemento 4</li>
+					<li>fsotillocuevas@gmail.com</li>
+					<li>+34 663 966 940</li>
 				</ul>
 			</article>
 			<article>
-				<h3>Título</h3>
+				<h3>Idiomas</h3>
 				<ul>
-					<li>Elemento 1</li>
+					<li>Inglés - Intermedio</li>
 					<li>Elemento 2</li>
-					<li>Elemento 3</li>
-					<li>Elemento 4</li>
 				</ul>
 			</article>
 			<article>
@@ -48,10 +47,34 @@
 		</section>
 		<section id="derecha">
 			<h1>Fabiana Sotillo</h1>
-			<h2>Full Stack Developer</h2>
+			<h2>Estudiante de DAM</h2>
 			<p>Profesional dinámica y proactiva con experiencia en hostelería y análisis de inventarios. Destaco por mis habilidades comunicativas, capacidad de adaptación y orientación al trabajo en equipo y disposición constante al aprendizaje. Experiencia en atención al cliente, protocolos de restauración y sistemas de gestión.</p>
-			
-			<div>
+			<div id="experiencia">
+				<h3>Experiencia profesional</h3>
+				<article>
+					<img src="logo.png">
+					<div class="texto">
+						<h4>Puesto</h4>
+						<h5>Inicio - Final - Empresa</h5>
+						<p>Descripción del puesto</p>
+					</div>
+				</article>
+				<article>
+					<img src="logo.png">
+					<div class="texto">
+						<h4>Puesto</h4>
+						<h5>Inicio - Final - Empresa</h5>
+						<p>Descripción del puesto</p>
+					</div>
+				</article>
+				<article>
+					<img src="logo.png">
+					<div class="texto">
+						<h4>Puesto</h4>
+						<h5>Inicio - Final - Empresa</h5>
+						<p>Descripción del puesto</p>
+					</div>
+				</article>
 			</div>
 		</section>
 	</body>
