--- a/Programación/005-Lectura y escritura de información/002-Ficheros de datos. Registros/008-articulo.html
+++ b/Programación/005-Lectura y escritura de información/002-Ficheros de datos. Registros/008-articulo.html
@@ -1,17 +1,17 @@
-<¡doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <title>FABIANAblog</title>
     <meta charset="utf-8">
     <style>
-    
+      
     </style>
   </head>
   <body>
     <header><h1>FABIANAblog</h1></header>
     <main>
       <article>
-        <h3>Título del artículo</h3>
+        <h3>Titulo del articulo</h3>
         <time>2025-10-16</time>
         <p>Fabiana Victoria Sotillo</p>
         <p>Este es el contenido de un artículo ficticio</p>
