--- a/Lenguaje de marcas/003-Manipulación de documentos web/003-Creación y modificación de elementos/003-evento click.html
+++ b/Lenguaje de marcas/003-Manipulación de documentos web/003-Creación y modificación de elementos/003-evento click.html
@@ -10,7 +10,11 @@
 				botones.forEach(function(texto_boton){
 					let boton = document.createElement("button");
 					boton.textContent = texto_boton;
-					contenedor.appendChild(boton)
+					contenedor.appendChild(boton);
+					// Cuando hagas click sobre el botón...
+					boton.onclick = function(){
+						console.log("Has hecho click en el botón")
+						}
 				})
 			</script>
 		</body>
