--- a/Bases de Datos/008-Proyectos/002-CRUD/004-Update/001-miniformulario.html
+++ b/Bases de Datos/008-Proyectos/002-CRUD/004-Update/001-miniformulario.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<form action="002-procesamodificar.php" method="POST">
-			<p>Introduce el ID del elemento que quieres eliminar</p>
+			<p>Introduce el ID del elemento que quieres modificar</p>
 			<input type="number" name="id" placeholder="id">
 			<input type="submit">
 		</form>
