--- a/Programación/010-Programación en el lado del servidor/014-CarruselSara/009-estilo de los botones.html
+++ b/Programación/010-Programación en el lado del servidor/014-CarruselSara/009-estilo de los botones.html
@@ -15,9 +15,17 @@
       <img src="cVfmrb97Wt0.jpg" alt="Texto alternativo">
     </div>
     <style>
-      .fabicarrusel{width:1280px;height:820px;overflow:hidden;}
+      .fabicarrusel{width:1280px;height:720px;overflow:hidden;position:relative;border-radius:10px;
+        box-shadow:0px 4px 10px rgba(0,0,0,0.3);}
       .fabicarrusel section{width:8960px;display:flex;left:0px;transition:all 1s;position:relative;}
       .fabicarrusel section img{width:1280px;height:720px;}
+      button{border:none;background:rgba(255,255,255,0.5);
+      width:60px;height:60px;position:absolute;
+      top:50%;border-radius:60px;font-size:30px;
+      line-height:60px;text-align:center;}
+      button:hover{background:rgba(255,255,255,1);transition:all 1s;}
+      .fabicarrusel button:first-of-type {left:2%;}
+      .fabicarrusel button:last-of-type {right:2%;}
     </style>
     <script>
       // Cojo el contenedor externo (es un solo elemento)
@@ -65,3 +73,10 @@
     </script>
   </body>
 </html>
+
+
+
+
+
+
+
