--- a/Lenguaje de marcas/008-Proyectos/003-creamos un jugador.html
+++ b/Lenguaje de marcas/008-Proyectos/003-creamos un jugador.html
@@ -15,6 +15,7 @@
       
       // Declaración de clases
       var temporizador;
+      var jugador = new Jugador();
       inicio()
       
       // Función de inicio
